fix: details structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="toolbar">
   <img src="/assets/img/logo.png" class="logo" alt>
-  <h1 class="title">skinX</h1>
+  <h1 class="title" routerLink="/">skinX</h1>
 </nav>
 
 <div class="content-wrapper">
