--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,6 +1,16 @@
-<div class="container">
+<div class="container" *ngIf="item">
   <div class="images">
-    <img [src]="img1" alt>
-    <img [src]="img2" alt>
+    <div class="outdoor">
+      <img [src]="selectedImg" alt>
+    </div>
+    <div class="carousel">
+      <img [src]="item.img1" (click)="selectedImg = item.img1" alt>
+      <img [src]="item.img2" (click)="selectedImg = item.img2" alt>
+    </div>
+  </div>
+
+  <div class="text text-center">
+    <h1>{{ item.title }}</h1>
+    <h3>{{ item.price | brl }}</h3>
   </div>
 </div>
