--- a/src/app/detail/detail.component.scss
+++ b/src/app/detail/detail.component.scss
@@ -1,12 +1,34 @@
 .images {
   display: flex;
+  flex-direction: column;
   gap: 16px;
   height: 300px;
 
-  img {
-    height: 100%;
-    width: calc(50% - 16px);
-    object-fit: cover;
-    border-radius: 8px;
+  .outdoor {
+    height: 200px;
+
+    img {
+      max-height: 100%;
+      display: block;
+      margin: 0 auto;
+      object-fit: cover;
+      border-radius: 8px;
+    }
   }
+
+  .carousel {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+
+    img {
+      height: 80px;
+      object-fit: cover;
+      border-radius: 8px;
+    }
+  }
+}
+
+:host {
+  color: black;
 }
