--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -75,7 +75,9 @@ $transition: all 0.35s ease-in-out;
   &:hover {
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6);
     background-color: #3d3d3d;
+  }
 
+  &:hover, &.switch {
     img {
       &.img1 {
         opacity: 0;
