--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,7 +13,7 @@
     right: 0;
     top: 0;
     opacity: 0.05;
-    background-image: url(/assets/img/bg.jpeg);
+    background-image: url(/assets/img/bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
   }
