feat: enhance details

--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -12,5 +12,7 @@
   <div class="text text-center">
     <h1>{{ item.title }}</h1>
     <h3>{{ item.price | brl }}</h3>
+
+    <button class="btn btn-success btn-lg">Comprar</button>
   </div>
 </div>
