feat: add chat screen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <nav class="toolbar">
   <img src="/assets/img/logo.png" class="logo" alt>
-  <h1 class="title" routerLink="/">skinX</h1>
+  <h1 class="title skinx" routerLink="/">skinX</h1>
+  <span class="spacer"></span>
+  <button class="btn btn-dark" routerLink="sell" routerLinkActive="hidden">Quero vender minha skin</button>
 </nav>
 
 <div class="content-wrapper">
