--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,3 +1,5 @@
+<a routerLink="../" class="btn btn-dark">Voltar</a>
+
 <div class="container" *ngIf="item">
   <div class="images">
     <div class="outdoor">
