--- a/src/app/detail/detail.component.scss
+++ b/src/app/detail/detail.component.scss
@@ -1,34 +1,21 @@
-.images {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  height: 300px;
-
-  .outdoor {
-    height: 200px;
-
-    img {
-      max-height: 100%;
-      display: block;
-      margin: 0 auto;
-      object-fit: cover;
-      border-radius: 8px;
-    }
-  }
-
-  .carousel {
-    display: flex;
-    justify-content: center;
-    gap: 16px;
-
-    img {
-      height: 80px;
-      object-fit: cover;
-      border-radius: 8px;
-    }
-  }
-}
-
-:host {
+app-detail {
   color: white;
+
+  ngb-carousel {
+    img {
+      height: 250px;
+      margin: 0 auto;
+      display: block;
+      border-radius: 10px;
+    }
+
+    .carousel-control-next,
+    .carousel-control-prev {
+      width: 50%;
+    }
+  }
+
+  .text {
+    margin-top: 26px;
+  }
 }
